# SURGE

./: .gitignore  .gitmodules  .lua-format  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Cargo.toml  README.md  TASKS.md  compile_shaders.py  config.yaml  make_staging.py  sbt.py  scomp.bat  scomp.sh  tasks.md  vcpkg-configuration.json  vcpkg.json  vcpkg.json.linux  vcpkg.json.windows
DTU/: CMakeLists.txt  config.ini
DTU/design/: characters.md  hera.md  index.md  indie.md  karan.md  lalita.md  plot.md  setting_and_themes.md
DTU/design/.obsidian/: app.json  appearance.json  community-plugins.json  core-plugins-migration.json  graph.json  workspace.json
DTU/design/characters/: emil_barrett.md  hera.md  indie.md  ismane.md  karan.md  npcs.md
DTU/design/plot_canvas/: canvas.canvas
DTU/design/resources/: tiles.blend  tiles.blend1
DTU/design/story/: faction_dispute.md  main_plot.md  master_and_apprentice.md  setting_and_themes.md
DTU/design/templates/: character_sheet.md  dw7pt.md  wiki_entry.md
DTU/design/wiki/: dark_lantern.md  dcmu.md  drizzle_city.md  factions.md  grimorie_das_all.md  lord.md  puer_sanguinis.md  shadow_key.md  the_kiss.md  the_mirror_maze.md  the_pact.md  the_revenants.md  the_table.md  the_unbound.md
DTU/include/: DTU.hpp  character.hpp  character_sheet.hpp  commands.hpp  container_types.hpp  debug_window.hpp  error_types.hpp  game_state.hpp  integer_types.hpp  main_menu.hpp  new_game.hpp  player  state_machine.hpp  states.hpp  type_aliases.hpp  ui.hpp  ui.hpp.back  uuid.hpp
DTU/include/main_menu/: main_menu.hpp
DTU/include/new_game/: new_game.hpp  ui_positional_data.hpp
DTU/include/ui/: character_sheet.hpp  character_sheet_elements.hpp  ui.hpp
DTU/resources/main_menu/: background.xcf  tiles.xcf
DTU/resources/maps/: DTU.tiled-project  DTU.tiled-session
DTU/shaders/: sprite.vert  text.frag
DTU/src/: DTU.cpp  DTU.cpp.back  character_sheet.cpp  debug_window.cpp  debug_window.cpp.back  global_init.cpp  main_menu.cpp  new_game.cpp  state_machine.cpp  ui.cpp  ui.cpp.back  uuid.cpp
DTU/src/main_menu/: main_menu.cpp
DTU/src/new_game/: new_game.cpp
DTU/src/ui/: character_sheet.cpp
core/: CMakeLists.txt
core/include/: allocators.hpp  cli.hpp  config.hpp  container_types.hpp  error_types.hpp  files.hpp  glm_includes.hpp  imgui_wrapper.hpp  integer_types.hpp  logging.hpp  module.hpp  options.hpp  options_in.txt  renderer.hpp  renderer_gl.hpp  renderer_vk.hpp  renderer_vk_back.hpp  renderer_vk_debug.hpp  renderer_vk_descriptor.hpp  renderer_vk_init.hpp  renderer_vk_malloc.hpp  renderer_vk_types.hpp  sc_allocators.hpp  sc_cli.hpp  sc_config.hpp  sc_container_types.hpp  sc_error_types.hpp  sc_files.hpp  sc_glfw_includes.hpp  sc_imgui.hpp  sc_integer_types.hpp  sc_logging.hpp  sc_module.hpp  sc_options.hpp  sc_options_in.txt  sc_tasks.hpp  sc_timers.hpp  sc_window.hpp  static_queue.hpp  surge_core.hpp  (+2 more)
core/include/gl_atoms/: gba.hpp  imgui.hpp  pmb.hpp  pv_ubo.hpp  shaders.hpp  sprite.hpp  sprite2.hpp  sprite_database.hpp  text.hpp  texture.hpp
core/include/sc_opengl/: sc_opengl.hpp
core/include/sc_vulkan/: renderer_vk_command.hpp  renderer_vk_descriptor.hpp  renderer_vk_images.hpp  renderer_vk_sync.hpp  sc_vulkan.hpp  sc_vulkan_debug.hpp  sc_vulkan_images.hpp  sc_vulkan_init.hpp  sc_vulkan_sync.hpp  (+1 more)
core/shaders/: CMakeLists.txt
core/src/: allocators.cpp  cli.cpp  config.cpp  files.cpp  imgui_wrapper.cpp  module.cpp  renderer.cpp  renderer_gl.cpp  renderer_vk.cpp  renderer_vk_back.cpp  renderer_vk_clear.cpp  renderer_vk_command.cpp  renderer_vk_debug.cpp  renderer_vk_descriptor.cpp  renderer_vk_images.cpp  renderer_vk_init.cpp  renderer_vk_malloc.cpp  renderer_vk_shader.cpp  sc_allocators.cpp  sc_cli.cpp  sc_config.cpp  sc_files.cpp  sc_imgui.cpp  sc_module.cpp  sc_tasks.cpp  sc_timers.cpp  sc_window.cpp  surge_core.cpp  tasks.cpp  timers.cpp  window.cpp
demos/: bp  (+2 more)
modules/: CMakeLists.txt  config.yaml
modules/2048/: CMakeLists.txt  config.ini  config.yaml
modules/compute_demo/: CMakeLists.txt  config.yaml
modules/default/: CMakeLists.txt  config.ini  config.yaml
modules/imgui_demo/: CMakeLists.txt  config.yaml
modules/lasers/: CMakeLists.txt  config.yaml
modules/model_viewer/: CMakeLists.txt  config.ini  config.yaml
modules/sprite_demo/: CMakeLists.txt  config.yaml
modules/text_demo/: CMakeLists.txt  config.yaml
player/: CMakeLists.txt
player/include/: VkBootstrap.hpp  VkBootstrapDispatch.hpp  allocators.hpp  cli.hpp  config.hpp  container_types.hpp  error_types.hpp  files.hpp  gl_includes.hpp  gl_ring_buffer.hpp  gpu_bump_array.hpp  integer_types.hpp  logging.hpp  module.hpp  mpsb.hpp  nonuniform_tiles.hpp  options_in.txt  override_new_delete.hpp  player.hpp  pmb.hpp  ptba.hpp  pv_ubo.hpp  renderer.hpp  sprite.hpp  ssbo.hpp  static_image.hpp  static_mesh.hpp  tasks.hpp  text.hpp  texture.hpp  vulkan_headers.hpp  window.hpp
player/src/: VkBootstrap.cpp  allocators.cpp  buffers.cpp  cli.cpp  config.cpp  files.cpp  gl_main_loop.cpp  glad_gl_impl.cpp  image.cpp  line.cpp  main.cpp  module.cpp  mpsb.cpp  nonuniform_tiles.cpp  player.cpp  pv_ubo.cpp  renderer.cpp  shaders.cpp  smo.cpp  sprite.cpp  static_image.cpp  static_mesh.cpp  text.cpp  texture.cpp  uniforms.cpp  vk_main_loop.cpp  window.cpp
player_gl/: CMakeLists.txt
player_gl/src/: main.cpp
player_vk/: CMakeLists.txt
player_vk/src/: main.cpp
surge_modules/2048/: CMakeLists.txt  config.yaml  make_staging.py
surge_player/: CMakeLists.txt  Cargo.toml
surge_player/include/: allocators.hpp  cli.hpp  files.hpp  font_cache.hpp  logging.hpp  logo.hpp  mimalloc_override_new_delete.hpp  module_manager.hpp  options.hpp  options_in.txt  renderer.hpp  surge_player.hpp  timers.hpp  window.hpp
surge_player/shaders/: image.frag  text.frag  text.vert
surge_player/source/: allocators.cpp  cli.cpp  files.cpp  font_cache.cpp  image.cpp  main.cpp  module_manager.cpp  renderer.cpp  shaders.cpp  timers.cpp  uniforms.cpp  window.cpp
surge_player/src/: main.rs
test/: CMakeLists.txt  test_template.cpp  tests.cpp
tools/map_maker/: CMakeLists.txt
(+443 files in other folders)
